[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ETo"
dynamic = ["version"]
description = "Class and functions to estimate reference ET"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
keywords = [
    "et",
    "reference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
  "spyder-kernels==2.5.2",
  "black",
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
]
docs = [
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.24",
]

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "spyder-kernels==2.4",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/mullenkamp/ETo"
Documentation = "https://mullenkamp.github.io/ETo/"

[tool.hatch.version]
path = "eto/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/eto",
]
exclude = [
  '/eto/tests/utest*',
]
